[gd_scene load_steps=4 format=3 uid="uid://ci8y8mvd357x0"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_urow1"]
[ext_resource type="Script" path="res://ui/selecter.gd" id="2_ajrkt"]
[ext_resource type="PackedScene" uid="uid://cjsep16wr2ysw" path="res://ui/test_mesh.tscn" id="3_qokeq"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_urow1")

[node name="Selecter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ajrkt")

[node name="TestMesh" parent="Selecter" instance=ExtResource("3_qokeq")]

[node name="Debug" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Dragging" type="Label" parent="Debug"]
layout_mode = 2

[node name="DragStart" type="Label" parent="Debug"]
layout_mode = 2

[node name="DragEnd" type="Label" parent="Debug"]
layout_mode = 2
